# OptixInOneWeekend

./: CMakeLists.txt  LICENSE  README.md
book/: OptixInOneWeekend.html
cmake/: FindOptiX.cmake
publishing/: book.md  book2.md  style_guide.md  todo.md
source/: CMakeLists.txt
source/Project1/Part1/Section1/: CMakeLists.txt
source/Project1/Part1/Section2/: CMakeLists.txt
source/Project1/Part1/Section3/: CMakeLists.txt  color.cu
source/Project1/Part2/Section1/: CMakeLists.txt
source/Project1/Part2/Section2/: CMakeLists.txt
source/Project2/Part1/: CMakeLists.txt  drawColor.cu
source/Project2/Part2/Section1/: CMakeLists.txt  drawColorGradient.cu  main.cpp
source/Project2/Part2/Section2/: CMakeLists.txt  main.cpp  miss.cu  raygen.cu
source/Project2/Part3/: CMakeLists.txt  main.cpp  material.cu  raydata.h  raygen.cu  sphere.cu
source/Project2/Part4/: CMakeLists.txt  main.cpp  material.cu  raygen.cu  sphere.cu
source/Project3/Part1/Section1/: CMakeLists.txt  main.cpp  raygen.cu
source/Project3/Part1/Section2/: CMakeLists.txt
source/Project3/Part1/Section2/core/: introOptix.cpp  introOptix.h  miss.cu  raydata.cuh  raygen.cu
source/Project3/Part1/Section2/geometry/: sphere.cu
source/Project3/Part1/Section2/materials/: material.cu
source/Project3/Part2/: CMakeLists.txt
source/Project3/Part2/core/: introOptix.h  miss.cu
source/Project3/Part2/geometry/: sphere.cu
source/Project3/Part2/materials/: material.cu
source/Project3/Part3/Section1/: CMakeLists.txt
source/Project3/Part3/Section1/core/: introOptix.cpp  introOptix.h
source/Project3/Part3/Section1/geometry/: ioGeometry.h  ioGeometryGroup.h  ioGeometryInstance.h  ioSphere.h  sphere.cu
source/Project3/Part3/Section1/material/: normalMaterial.cu
source/Project3/Part3/Section1/materials/: ioMaterial.h  ioNormalMaterial.h
source/Project3/Part3/Section2/: CMakeLists.txt
source/Project3/Part3/Section2/core/: introOptix.cpp  introOptix.h  ioScene.h  raygen.cu
source/Project3/Part3/Section2/geometry/: sphere.cu
source/Project3/Part3/Section2/material/: ioNormalMaterial.h
source/Project3/Part4/Section1/: CMakeLists.txt
source/Project3/Part4/Section1/core/: ioScene.h
source/Project3/Part4/Section1/random/: sampling.cuh
source/Project3/Part4/Section2/: CMakeLists.txt
source/Project3/Part4/Section2/core/: introOptix.h  ioScene.h  raygen.cu
source/Project3/Part4/Section2/material/: ioLambertianMaterial.h
source/Project3/Part4/Section2/random/: sampling.cuh
source/Project3/Part4/Section3/: CMakeLists.txt
source/Project3/Part4/Section3/core/: ioScene.h  raygen.cu
source/Project3/Part4/Section3/geometry/: ioGeometryInstance.h  sphere.cu
source/Project3/Part4/Section3/material/: dielectricMaterial.cu  lambertianMaterial.cu
source/Project3/Part5/Section1/: CMakeLists.txt
source/Project3/Part5/Section1/core/: camera.cuh  ioScene.h  raygen.cu
source/Project3/Part5/Section1/material/: metalMaterial.cu
source/Project3/Part5/Section2/core/: ioScene.h  raydata.cuh  raygen.cu
source/Project3/Part5/Section2/material/: dielectricMaterial.cu  normalMaterial.cu
src/: CMakeLists.txt  approxPi.cu  helloWorld.cpp  helloWorld.cu  main.cpp  mandelbrot.cu
src/core/: introOptix.cpp  ioCamera.h  ioScene.h  miss.cu  raygen.cu
src/geometry/: ioGeometry.h  ioGeometryGroup.h  ioSphere.h
src/material/: ioDielectricMaterial.h  ioMetalMaterial.h  ioNormalMaterial.h
